[gd_scene load_steps=7 format=3 uid="uid://0ukm2uxkfoum"]

[ext_resource type="Script" uid="uid://c858kxyp6xsoj" path="res://scripts/main.gd" id="1_0bbpv"]
[ext_resource type="PackedScene" uid="uid://bup7p43jmrfug" path="res://scenes/ui/service_graph.tscn" id="1_elqb8"]
[ext_resource type="PackedScene" uid="uid://ci6284mim63qb" path="res://scenes/combat_scene.tscn" id="2_rvslj"]
[ext_resource type="PackedScene" uid="uid://dpfxc7xyxcfdx" path="res://scenes/enemy.tscn" id="4_rarhs"]
[ext_resource type="AudioStream" uid="uid://cimqju7h5grnw" path="res://music/yamete.wav" id="5_vcsgt"]
[ext_resource type="PackedScene" path="res://scenes/credits.tscn" id="6_c01mt"]

[node name="Main" type="Node"]
script = ExtResource("1_0bbpv")

[node name="ServiceGraph" parent="." instance=ExtResource("1_elqb8")]

[node name="CombatScene" parent="." instance=ExtResource("2_rvslj")]
visible = false

[node name="Enemy" parent="." instance=ExtResource("4_rarhs")]

[node name="HUD" type="CanvasLayer" parent="."]

[node name="TimeLabel" type="Label" parent="HUD"]
offset_right = 40.0
offset_bottom = 23.0

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_vcsgt")

[node name="Cerdits" parent="." instance=ExtResource("6_c01mt")]
visible = false
